--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           dotnet-version: 5.0.101
 
+      - name: Restore
+        run: dotnet restore
+
       - name: Build
         run: |
           dotnet build --configuration Release ./dotnetcore-template/dotnetcore-template.csproj
