ci: change publish step in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Publish
         run: |
-          dotnet publish -c Release -o dotnetcoretemplate ./dotnetcore-template
+          dotnet publish -c Release -o dist
 
       - name: Test
         run: |
